--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Seymour+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 html, body{
     margin: 0;
     padding: 0;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13.5px;
 }
 .logo{
     font-family: "Roboto Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
-    font-size: 1.5rem;
-    margin: 3px;
+    font-size: 1rem;
+    margin: 1px;
+    padding:0;
 }
 .separator{
     width: 96%;
@@ -53,12 +60,13 @@ html, body{
 }
 
 .draggable-component {
-    display: inline-block;
-    min-width: 80px;
-    max-width: 100%;
+    display: initial; /*inline-block;*/
+    /*min-width: 80px;*/
+    /*max-width: 100%;*/
     position: relative;
-    border: 1px dotted #ccc;
-    min-height: 20px;
+    /*border: 1px dotted #ccc;*/
+    /*min-height: 20px;*/
+    padding:5px;
 }
 
 .draggable-component.drag-over {
@@ -120,4 +128,9 @@ html, body{
             flex-grow:1;
         }
     }
+}
+
+#panel-projects-files .p-panel-content{
+    padding:0;
+    margin:0;
 }
