--- a/assets/style.css
+++ b/assets/style.css
@@ -40,16 +40,20 @@ html, body{
     background-color: #eee;*/
 }
 
-.drop-area {
+.drop-area{
     /* display: flex; */
     flex-grow: 1;
     /* flex-wrap: wrap; */
     /* flex-direction: column; */
-    border: 2px dashed #5fd7ff;
     /* padding: 10px; */
     /* min-height: 50px; */
     height: 100%;
 }
+
+.drop-area.editor-area {
+    border: 2px dashed #5fd7ff;
+}
+
 .generated-code {
     width: 100%;
     height: 100%;
@@ -60,7 +64,8 @@ html, body{
 }
 
 .draggable-component {
-    display: initial; /*inline-block;*/
+     /*display: inline-block;*/
+    display: initial;
     /*min-width: 80px;*/
     /*max-width: 100%;*/
     position: relative;
@@ -74,8 +79,7 @@ html, body{
 }
 .droppable-area {
     border: 1px dashed #ccc;
-    padding: 20px;
-    width: 100%;
+    padding:5px;
 }
 .drag-over {
 }
