--- a/assets/style.css
+++ b/assets/style.css
@@ -31,14 +31,15 @@ html, body{
     margin: 0;
     padding: 0;
 }
-
 .editor {
     height: 100%;
     width: 100%;
     flex-grow: 1;
-/*    padding: 20px 10px 10px;
-    background-color: #eee;*/
+    /*    padding: 20px 10px 10px;
+        background-color: #eee;*/
 }
+
+
 
 .drop-area{
     /* display: flex; */
@@ -65,11 +66,12 @@ html, body{
 
 .draggable-component {
      /*display: inline-block;*/
-    display: initial;
+    /*display: initial;*/
+    /*display: contents; !* Ignora il contenitore *!*/
     /*min-width: 80px;*/
     /*max-width: 100%;*/
     position: relative;
-    /*border: 1px dotted #ccc;*/
+    border: 1px dotted #ccc;
     /*min-height: 20px;*/
     padding:5px;
 }
@@ -148,3 +150,15 @@ html, body{
         font-size:.9rem;
     }
 }
+/*
+#editor-components-wrapper {
+    display: flex;
+    flex-wrap: wrap; !* Fa andare i componenti a capo automaticamente *!
+    width: 100%; !* Occupa tutta la larghezza del contenitore *!
+    gap: 10px; !* Aggiunge uno spazio tra i componenti *!
+}
+.droppable-component {
+    flex-grow: 1;
+    min-width: 150px; !* Imposta una larghezza minima per ogni componente *!
+    height: auto;
+}*/
